# Vigil

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  example.yaml
src/: app.rs  cli.rs  config.rs  main.rs  web.rs
src/web/: checker.rs  mod.rs  model.rs
