[package]
name = "Vigil"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.100"
